--- a/index.html
+++ b/index.html
@@ -11,20 +11,29 @@
    </head>
    <body>
       <div class="Header">
-      <p class="betweenNumber">( Between 1 and 20 )</p>
-      <button type="reset" class="btnAgain">Start again</button>
+         <p class="betweenNumber">( Between 1 and 20 )</p>
+         <button type="reset" class="btnAgain">Start again</button>
       </div>
-      <p class="tittleName">Guess the number</p>
+         <p class="tittleName">Guess the number</p>
       <div class="question">???</div>
       <div class="main">
-      <input class="guess" type="number">
-      <button class="checker">Check</button>
-      <div class="Score">
-      <p class="start">Start guessing</p>
-      <p class="points">Points: 20</p>
-      <p class="try">Best try: 0</p>
+            <input class="guess" type="number">
+            <button id="check" class="checker">Check</button>
+         <div class="Score">
+               <p class="start">Start guessing</p>
+               <p class="points">Points: 20</p>
+               <p class="try">Best try: 0</p>
+         </div>
       </div>
-      </div>
+      <button class="show-modal-window">Rules</button>
+      <div class="modal-window hidden">
+         <button class="close-modal-window">&times;</button>
+         <h1>Rules</h1>
+            <p>You need to guess the secret number between 1 and 20, on the right you will see hints that will help you to the win, indicating the difference between your number and the guessed number, more or less you need to choose<br>
+            <br>Good Luck xD
+            </p>
+        </div>
+        <div class="overlay hidden"></div>
       <script src="script.js"></script>
    </body>
 </html>
