--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <p class="tittleName">Guess the number</p>
       <div class="question">???</div>
       <div class="main">
-            <input class="guess" type="number">
+            <input class="guess" type="number" name="number" min="1" max="20">
             <button id="check" class="checker">Check</button>
          <div class="Score">
                <p class="start">Start guessing</p>
